--- a/index.html
+++ b/index.html
@@ -7,23 +7,79 @@
     <title>Document</title>
   </head>
   <body>
-    <p>JS</p>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
-    <label for="">
-      Число
-      <input type="number" data-value />
-    </label>
-    <button type="button" data-add>Прибавка</button>
-    <button type="button" data-reset>Очистить</button>
+    <span>
+      <p>JS</p>
+      <label for="">
+        Число
+        <input type="number" data-value />
+      </label>
+      <button type="button" data-add>Прибавка</button>
+      <button type="button" data-reset>Очистить</button>
+      <p class="js-output">Сумма: <span>0</span></p>
+      <button type="button" class="js-button">Урок 5 Урок 5 Урок 5</button>
+    </span>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut veniam nemo cupiditate quas
+      pariatur laboriosam, repellendus sunt illum. Quis repellendus quasi labore dolor sequi. Vel
+      corporis iusto voluptate commodi itaque?
+    </p>
+    <span>
+      <div class="counter">
+        <button class="js-decrement">Уменьшить</button>
+        <p class="js-value">0</p>
+        <button class="js-increment">Увеличить</button>
+      </div>
+    </span>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non reprehenderit repellat
+      architecto, cumque incidunt aperiam aut exercitationem in nisi facilis autem assumenda magnam
+      labore esse eaque cum quibusdam, culpa doloribus?
+    </p>
+    <span>
+      <div id="counter-1">
+        <button data-increment>+</button>
+        <span data-value>0</span>
+        <button data-decrement>-</button>
+      </div>
+      <div id="counter-2">
+        <button data-increment>+</button>
+        <span data-value>0</span>
+        <button data-decrement>-</button>
+      </div>
+    </span>
 
-    <p class="js-output">Сумма: <span>0</span></p>
+    <script src="./js/lessons/lesson-1-2.js" type="module"></script>
+    <script src="./js/lessons/lesson-1-2-script.js" type="module"></script>
 
-    <script src="./js/script-lesson-1-2.js" type="module"></script>
-    <script src="./js/script-2.js" type="module"></script>
-    <script src="./js/script-pract1-3.js" type="module"></script>
-    <script src="./js/script-pract1-4.js" type="module"></script>
-    <script src="./js/script-pract1-5.js" type="module"></script>
-    <script src="./js/script-pract1-6.js" type="module"></script>
-    <script src="./js/script-pract1-7.js" type="module"></script>
+    <script src="./js/lessons/lesson-3-4.js" type="module"></script>
+    <script src="./js/lessons/example-lesson-3-4.js" type="module"></script>
+    <script src="./js/lessons/lesson-5-6.js" type="module"></script>
+    <script src="./js/lessons/lesson-5-6-lodash.js" type="module"></script>
+    <script src="./js/lessons/lesson-7-8.js" type="module"></script>
+
+    <script src="./js/practice/pract-1-1.js" type="module"></script>
+    <script src="./js/practice/pract-1-2.js" type="module"></script>
+
+    <script src="./js/practice/my.pract.js" type="module"></script>
+    <script src="./js/practice/pract-1-3.js" type="module"></script>
+    <script src="./js/practice/pract-1-4.js" type="module"></script>
+    <script src="./js/practice/pract-1-5.js" type="module"></script>
+    <script src="./js/practice/pract-2.js" type="module"></script>
+    <script src="./js/practice/pract-3-1.js" type="module"></script>
+    <script src="./js/practice/pract-3-2.js" type="module"></script>
+
+    <script src="./js/onlineLesson/module_01.1.js" type="module"></script>
+    <script src="./js/onlineLesson/module_01.2.js" type="module"></script>
+    <script src="./js/onlineLesson/module_02.3.js" type="module"></script>
+    <script src="./js/onlineLesson/module_02.4.js" type="module"></script>
+    <script src="./js/onlineLesson/module_03.5.js" type="module"></script>
+    <script src="./js/onlineLesson/module_03.6.js" type="module"></script>
+    <script src="./js/onlineLesson/module_04.7.js" type="module"></script>
+    <script src="./js/onlineLesson/module_04.8.js" type="module"></script>
+    <script src="./js/onlineLesson/module_05.9.js" type="module"></script>
+    <script src="./js/onlineLesson/module_05.10.js" type="module"></script>
+    <script src="./js/onlineLesson/qa_01.js" type="module"></script>
   </body>
 </html>
